[package]
name = "decrypt"
version = "0.1.0"
authors = ["Kadan Stadelmann <ca333@komodoplatform.com>"]
homepage = "https://decrypt.rs"
repository = "https://github.com/ca333/decrypt"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
